--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,23 @@
         "laravel"
     ],
     "license": "MIT",
-    "require": {
-        "php": "^7.2",
+     "require": {
+        "php": "^7.1.3",
+        "appzcoder/laravel-admin": "^3.1",
+        "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/framework": "5.8.*",
+        "laravel/tinker": "^1.0",
+        "league/flysystem-aws-s3-v3": "~1.0",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
+        "beyondcode/laravel-dump-server": "^1.0",
+        "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^7.5"
     },
     "config": {
         "optimize-autoloader": true,
